<resources>
    <string name="app_name">Comfort Corner</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="login">LOGIN</string>
    <string name="register">SIGN UP</string>
    <string name="name"> Name</string>
    <string name="save">Save</string>
    <string name="enterdetails">Enter note details</string>
    <string name="newaccount">Create new account!</string>
    <string name="haveccount">Already have an account!</string>
    <string name="verifyEmail">Please check your email and click on the link to verify your account!</string>
    <string name="my_profile">My Profile</string>
    <string name="vname">Name:</string>
    <string name="not_found">Not found!</string>
    <string name="vemail">Email:</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="let_s_write">Write,</string>
    <string name="welcome_text">Welcome to your gateway to unforgettable experiences. Discover a world of hospitality, convenience, and relaxation at your fingertips.</string>
    <string name="let_s_find_your_room">Find your room!</string>
    <string name="best_offers">Best Offers</string>
    <string name="view_all">View All</string>
    <string name="check_your_profile">Check your profile</string>
    <string name="logout">logout</string>
    <string name="master_room">Master Room</string>
    <string name="all_service_you_need">All services you need!</string>
    <string name="room_service">Room Service</string>
    <string name="booking_history">Booking History</string>
    <string name="current_booking">Current Booking</string>
    <string name="requested_booking">Requested Booking</string>
    <string name="management_panel">Management Panel</string>
    <string name="view_customers">View Customers</string>
    <string name="add_room">Add Room</string>
    <string name="view_rooms">View Rooms</string>
    <string name="add">Add</string>
    <string name="upload_room_photo">Upload Room Photo</string>
    <string name="adding_new_room">Adding new room</string>
    <string name="let_s_fill_up_the_needed_details">Fill up room\'s Details</string>
    <string name="room_title">Room Title</string>
    <string name="room_description">Room Description</string>
    <string name="room_price">Room Price</string>
    <string name="room_location">Room Location</string>
    <string name="page_title">Page Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="similar">Similar</string>
    <string name="book_your_room">Book your room</string>
    <string name="book">Book</string>
    <string name="cancel">Cancel</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="enter_nights">Enter Nights</string>
    <string name="status">Status:</string>
    <string name="total_payment">Total Payment</string>
    <string name="accept">Accept</string>
    <string name="customer_email">Customer Email:</string>
    <string name="checkout">Checkout</string>
    <string name="nights">Nights</string>
    <string name="checkout_at">Checkout At:</string>
</resources>